--- a/index.html
+++ b/index.html
@@ -2,142 +2,211 @@
 <html lang="pl-PL">
 <head>
       <meta charset="UTF-8">
-      <title>zadanie_1</title>
+      <title>possible</title>
       <link rel="stylesheet" href="css/main.css">
+      <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-      <body>
-        <div class="grid-container">
+    <body>
 
-            <div id="header" class="row">
-                <div id="logo" class="col-3 container">
-                </div>
-                <div id="QRcode" class="col-3 container">
-                    <div class="row">
-                        <div id="text_QR" class="col-3 container">
-                            <p id="text_property">View This Property</p>
-                            <p>text <span>P86042</span></p>
-                            <p>to <span>85377</span></p>
+        <div class="grid">
+
+            <div class="row">
+                <div class="col-12">
+                    <header>
+                        <div class="head">
+                            <div id="logo">
+
+                            </div>
+                            <div id="data">
+                                18 February 2010
+                            </div>
                         </div>
-                        <div id="img_QR" class="col-3 container">
-                            <div id="img_QRcode"></div>
+                        <nav class="navigation">
+                            <ul>
+                                <li>
+                                    <button class="button">
+                                        <a href="#">OUR COMPANY</a>
+                                    </button>
+                                </li>
+                                <li>
+                                    <button class="button">
+                                        <a href="#">OUR WORK</a>
+                                    </button>
+                                </li>
+                                <li>
+                                    <button class="button">
+                                        <a href="#">INFORMATION</a>
+                                    </button>
+                                </li>
+                                <li>
+                                    <button class="button">
+                                        <a href="#">CONTACT US</a>
+                                    </button>
+                                </li>
+                            </ul>
+                        </nav>
+
+                    </header>
+                </div>
+            </div>
+
+            <div class="row" id="company-margin">
+                <div class="col-8" id="company">
+                    <section>
+                        <h1>
+                            <p id="text-possible">
+                                Welcome to Possible
+                            </p>
+                        </h1>
+                        <p class="text-company">
+                            Excitavit hic ardor milites per municipia plurima, quae isdem conterminant, dispositos et castella, sed quisque serpentes latius pro viribus repellere moliens, nunc globis confertos, aliquotiens et dispersos.<br>
+                        </p>
+                        <p class="text-company">
+                            Quibus ita sceleste patratis Paulus cruore perfusus reversusque ad principis castra multos coopertos paene catenis adduxit in squalorem.
+                        </p>
+                        <h4>
+                            <p id="text-team">
+                                MEET THE TEAM
+                            </p>
+                        </h4>
+
+                        <div id="slider">
+                            <div id="slide-big-container">
+                                <!-- <img id="slide-big" alt="slide-big"/> -->
+                                <input type="radio" name="slide_switch" id="id1"/>
+                                   <label for="id1">
+                                       <img class="slide-image-1 image-small" alt="image face team"/>
+                                   </label>
+                                   <img class="slide-image-1 image-big" alt="image face team"/>
+                                 <input type="radio" name="slide_switch" id="id2"/>
+                                    <label for="id2">
+                                        <img class="slide-image-2 image-small" alt="image face team"/>
+                                    </label>
+                                    <img class="slide-image-2 image-big" alt="image face team"/>
+                                <input type="radio" name="slide_switch" id="id3"/>
+                                     <label for="id3">
+                                         <img class="slide-image-3 image-small" alt="image face team"/>
+                                     </label>
+                                     <img class="slide-image-3 image-big" alt="image face team"/>
+                                <input type="radio" name="slide_switch" id="id4"/>
+                                    <label for="id4">
+                                        <img class="slide-image-4 image-small" alt="image face team"/>
+                                    </label>
+                                    <img class="slide-image-4 image-big" alt="image face team"/>
+                                <input type="radio" name="slide_switch" id="id5"/>
+                                    <label for="id5">
+                                        <img class="slide-image-5 image-small" alt="image face team"/>
+                                    </label>
+                                    <img class="slide-image-5 image-big" alt="image face team"/>
+                                <input type="radio" name="slide_switch" id="id6"/>
+                                    <label for="id6">
+                                        <img class="slide-image-6 image-small" alt="image face team"/>
+                                    </label>
+                                    <img class="slide-image-6 image-big" alt="image face team"/>
+                                <input type="radio" name="slide_switch" id="id7"/>
+                                    <label for="id7">
+                                        <img class="slide-image-7 image-small" alt="image face team"/>
+                                    </label>
+                                    <img class="slide-image-7 image-big" alt="image face team"/>
+                                <input type="radio" name="slide_switch" id="id8"/>
+                                    <label for="id8">
+                                        <img class="slide-image-8 image-small" alt="image face team"/>
+                                    </label>
+                                    <img class="slide-image-8 image-big" alt="image face team"/>
+                                <input type="radio" name="slide_switch" id="id9"/>
+                                    <label for="id9">
+                                        <img class="slide-image-9 image-small" alt="image face team"/>
+                                    </label>
+                                    <img class="slide-image-9 image-big" alt="image face team"/>
+                                <input type="radio" name="slide_switch" id="id10"/>
+                                    <label for="id10">
+                                        <img class="slide-image-10 image-small" alt="image face team"/>
+                                    </label>
+                                <img class="slide-image-10 image-big" alt="image face team"/>
+                            </div>
+                            <div id="slide-information">
+                                <p id="slide-name">
+                                    Justin Cooke
+                                </p>
+                                <p id="slide-information">
+                                    CEO, POSSIBLE UK, LONDON
+                                </p>
+                            </div>
                         </div>
-                    </div>
-                </div>
-            </div>
 
-            <div class="row">
-                <div id="text_gallery" class="col-6 container">
-                    <p>11911 Champion Lake Court Herndon VA 20170 | <span>$1,019,900</span></p>
-                    <div></div>
+                        <div id="slides">
+                            <a href="#" class="slide-btn-prev"></a>
+                            <a href="#" class="slide-btn-next"></a>
+                        </div>
+                    </section>
                 </div>
-            </div>
-            <div class="row">
-                <div id="slider" class="col-3 container">
-                  <a id="nextPicture">&#10094;</a>
-                    <ul>
-                        <li><img src="images/view_1.png"></li>
-                        <li><img src="images/view_2.png"></li>
-                        <li><img src="images/view_3.png"></li>
-                        <li><img src="images/view_4.png"></li>
-                        <li><img src="images/view_5.png"></li>
-                    </ul>
-                  <a id="prevPicture">&#10095;</a>
-                </div>
-                <div id="images" class="col-3 container">
-                    <div><img src="images/view_1.png"></div>
-                    <div><img src="images/view_2.png"></div>
-                    <div><img src="images/view_3.png"></div>
-                    <div><img src="images/view_4.png"></div>
-                    <div><img src="images/view_5.png"></div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div id="article" class="col-6 container">
-                    <div class="head_contents">
-                        <p>Property <span>Description</span></p>
-                    </div>
-                    <div class="article_text">
-                        <p>
-                            PRICE REDUCED! Spectacular colonial on gorgeous wooded WATERFRONT lot. NEW ROOF. 2-story foyer. Gourmet kitchen w/ granite
-                            countertops & top-of-line SS appliances. Updated MB w/ jetted tub, glass encl shower, porcelain tiled floor. MBR w/ sitting room & His & Her
-                            WI closets. 2 gas fpl's. Bsmt. fully finished w/ walk-out to patio, large rec room & au pair suite. Large deck w/ gas to BBQ grill... .
+                <div class="col-4" id="sidebar">
+                    <div id="sidebar-container">
+                    <sidebar>
+                        <div id="sidebar-line">
+                        </div>
+                            <h4>
+                                <div id="text-border">
+                                    <p id="text-map">
+                                        LOREM IPSUM
+                                    </p>
+                                </div>
+                            </h4>
+                            <div id="image-map-container">
+                                <img id="image-map" alt="image-map"/>
+                            </div>
+                        <p id="text-map-description">
+                            Tempore quo primis auspiciis<br>
+                            in mundanum fulgorem surgeret
                         </p>
-                    </div>
+                    </sidebar>
+                </div>
                 </div>
             </div>
+
+
             <div class="row">
-                <div id="details" class="col-3 container">
-                    <div class="head_contents">
-                        <p>Property <span>Details</span></p>
-                    </div>
-
-                      <table>
-                          <tr>
-                            <td>Beds</td>
-                            <td>5</td>
-                          </tr>
-                          <tr>
-                            <td>Baths</td>
-                            <td>4 full, 1 half</td>
-                          </tr>
-                          <tr>
-                            <td>Price</td>
-                            <td>$1,019,900</td>
-                          </tr>
-                          <tr>
-                            <td>Type</td>
-                            <td>Residential</td>
-                          </tr>
-                          <tr>
-                            <td>Lot Size</td>
-                            <td>0.69</td>
-                          </tr>
-                          <tr>
-                            <td>SQ Feet</td>
-                            <td>4650</td>
-                          </tr>
-                          <tr>
-                            <td>Garage</td>
-                            <td>2</td>
-                          </tr>
-                          <tr>
-                            <td>Status</td>
-                            <td>Active</td>
-                          </tr>
-                      </table>
-
-                </div>
-                <div id="contact" class="col-3 container">
-                    <div class="head_contents">
-                        <p>Listing <span>Agent</span></p>
-                    </div>
-                    <div id="img_contact">
-                        <img src="images/agent.png"></img>
-                    </div>
-                    <div id="text_contact">
-                      <p>
-                          Pat Fischer<br>
-                          Email: patfischer12@gmail.com<br>
-                          Phone: (703) 283-7427<br>
-                          Company: Exit Realty Associates<br>
-                          Office: (703) 339-7506
-                      </p>
-                    </div>
-                    <div id="text_office">
-                        <p>
-                          Each office independently owned & operated
-                        </p>
-                    </div>
+                <div class="col-12">
+                    <footer class="footer">
+                        <ul>
+                            <li>
+                                <i class="fa fa-building" aria-hidden="true"></i>
+                                <span>Our company</span>
+                            </li>
+                            <li>
+                                <i class="fa fa-briefcase" aria-hidden="true"></i>
+                                <span>Our work</span>
+                            </li>
+                            <li>
+                                <i class="fa fa-info" aria-hidden="true"></i>
+                                <span>Information</span>
+                            </li>
+                            <li>
+                                <i class="fa fa-newspaper-o" aria-hidden="true"></i>
+                                <span> Join our newsletter</span>
+                            </li>
+                            <li>
+                                <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                                <span>Email this page</span>
+                            </li>
+                            <li>
+                                <i class="fa fa-print" aria-hidden="true"></i>
+                                <span>Print this page</span>
+                            </li>
+                            <li>
+                                <i class="fa fa-comments" aria-hidden="true"></i>
+                                <span>Contact Us<span>
+                            </li>
+                        </ul>
+                    </footer>
                 </div>
             </div>
-
-
 
 
         </div>
+
         <script src="js/jquery-3.1.1.min.js"></script>
-        <script src="js/app.js"></script>
-      </body>
+        <script src="js/main.js"></script>
+    </body>
 </html>
