--- a/index.html
+++ b/index.html
@@ -2,125 +2,217 @@
 <html lang="pl-PL">
 <head>
       <meta charset="UTF-8">
-      <title>railcom</title>
+      <title>possible</title>
       <link rel="stylesheet" href="css/main.css">
+      <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
     <body>
+
         <div class="grid">
 
-            <div class="row" >
+            <div class="row">
                 <div class="col-12">
-                    <div id="home">
-                        <div id="home-logo">
+                    <header>
+                        <div class="head">
+                            <div id="logo">
+
+                            </div>
+                            <div id="data">
+                                18 February 2010
+                            </div>
                         </div>
-                    </div>
+                        <nav class="navigation">
+                            <ul>
+                                <li>
+                                    <button class="button">
+                                        <a href="#">OUR COMPANY</a>
+                                    </button>
+                                </li>
+                                <li>
+                                    <button class="button">
+                                        <a href="#">OUR WORK</a>
+                                    </button>
+                                </li>
+                                <li>
+                                    <button class="button">
+                                        <a href="#">INFORMATION</a>
+                                    </button>
+                                </li>
+                                <li>
+                                    <button class="button">
+                                        <a href="#">CONTACT US</a>
+                                    </button>
+                                </li>
+                            </ul>
+                        </nav>
+
+                    </header>
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-12">
-                    <div id="about">
-                        <div id="about-text">
-                            <h1 id="about-head">
-                                O RAILCOM
-                            </h1>
-                            <p id="about-paragraph">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus finibus metus aliquet ultrices ornare. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut sagittis arcu.
-                                Pellentesque aliquam gravida pharetra. Nulla auctor enim et gravida mollis. Curabitur consequat ipsum sed felis tempus tempor. Cras pretium lorem ut mi lacinia dignissim. Mauris vel felis diam.
-                                In ut tempor quam. Ut pellentesque, odio ut dictum efficitur, turpis est molestie augue, non ullamcorper massa purus a erat. Suspendisse porta, tortor vel commodo mollis.
+            <div class="row" id="company-margin">
+                <div class="col-8" id="company">
+                    <section>
+                        <h1>
+                            <p id="text-possible">
+                                Welcome to Possible
                             </p>
-                            <p id="about-paragraph-ofert">
-                                Diam elit ultrices dui, eu mattis massa velit sit amet purus.
+                        </h1>
+                        <p class="text-company">
+                            Excitavit hic ardor milites per municipia plurima, quae isdem conterminant, dispositos et castella, sed quisque serpentes latius pro viribus repellere moliens, nunc globis confertos, aliquotiens et dispersos.<br>
+                        </p>
+                        <p class="text-company">
+                            Quibus ita sceleste patratis Paulus cruore perfusus reversusque ad principis castra multos coopertos paene catenis adduxit in squalorem.
+                        </p>
+                        <h4>
+                            <p id="text-team">
+                                MEET THE TEAM
                             </p>
+                        </h4>
+
+                        <div id="slide-container">
+                            <div id="slider">
+                                <input type="radio" name="slide_switch" id="id1" checked/>
+                                   <label for="id1">
+                                       <img class="slide-image-1 image-small" alt=" "/>
+                                   </label>
+                                   <img class="slide-image-1 image-big" alt=" "/>
+
+                                 <input type="radio" name="slide_switch" id="id2"/>
+                                    <label for="id2">
+                                        <img class="slide-image-2 image-small" alt=" "/>
+                                    </label>
+                                    <img class="slide-image-2 image-big" alt=" "/>
+
+                                <input type="radio" name="slide_switch" id="id3"/>
+                                     <label for="id3">
+                                         <img class="slide-image-3 image-small" alt=" "/>
+                                     </label>
+                                     <img class="slide-image-3 image-big" alt=" "/>
+
+                                <input type="radio" name="slide_switch" id="id4"/>
+                                    <label for="id4">
+                                        <img class="slide-image-4 image-small" alt=" "/>
+                                    </label>
+                                    <img class="slide-image-4 image-big" alt=" "/>
+
+                                <input type="radio" name="slide_switch" id="id5"/>
+                                    <label for="id5">
+                                        <img class="slide-image-5 image-small" alt=" "/>
+                                    </label>
+                                    <img class="slide-image-5 image-big" alt=" "/>
+
+                                <input type="radio" name="slide_switch" id="id6"/>
+                                    <label for="id6">
+                                        <img class="slide-image-6 image-small" alt=" "/>
+                                    </label>
+                                    <img class="slide-image-6 image-big" alt=" "/>
+
+                                <input type="radio" name="slide_switch" id="id7"/>
+                                    <label for="id7">
+                                        <img class="slide-image-7 image-small" alt=" "/>
+                                    </label>
+                                    <img class="slide-image-7 image-big" alt=" "/>
+
+                                <input type="radio" name="slide_switch" id="id8"/>
+                                    <label for="id8">
+                                        <img class="slide-image-8 image-small" alt=" "/>
+                                    </label>
+                                    <img class="slide-image-8 image-big" alt=" "/>
+
+                                <input type="radio" name="slide_switch" id="id9"/>
+                                    <label for="id9">
+                                        <img class="slide-image-9 image-small" alt=" "/>
+                                    </label>
+                                    <img class="slide-image-9 image-big" alt=" "/>
+
+                                <input type="radio" name="slide_switch" id="id10"/>
+                                    <label for="id10">
+                                        <img class="slide-image-10 image-small" alt=" "/>
+                                    </label>
+                                <img class="slide-image-10 image-big" alt=" "/>
+
+                            </div>
+                        <!--    <div id="slide-information">
+                                <p id="slide-name">
+                                    Justin Cooke
+                                </p>
+                                <p id="slide-information">
+                                    CEO, POSSIBLE UK, LONDON
+                                </p>
+                            </div> -->
                         </div>
-                    </div>
+
+                    <!--    <div id="slides">
+                            <a href="#" class="slide-btn-prev"></a>
+                            <a href="#" class="slide-btn-next"></a>
+                        </div> -->
+
+                    </section>
+                </div>
+                <div class="col-4" id="sidebar">
+                    <div id="sidebar-container">
+                    <sidebar>
+                        <div id="sidebar-line">
+                        </div>
+                            <h4>
+                                <div id="text-border">
+                                    <p id="text-map">
+                                        LOREM IPSUM
+                                    </p>
+                                </div>
+                            </h4>
+                            <div id="image-map-container">
+                                <img id="image-map" alt="image-map"/>
+                            </div>
+                        <p id="text-map-description">
+                            Tempore quo primis auspiciis<br>
+                            in mundanum fulgorem surgeret
+                        </p>
+                    </sidebar>
+                </div>
                 </div>
             </div>
+
 
             <div class="row">
                 <div class="col-12">
-                    <div id="products-1">
-                        <div id="products-common-rail">
-                            <div id="common-rail">
-                                <h1 id="common-rail-head">
-                                    COMMON RAIL
-                                </h1>
-                                <p id="common-rail-paragraph">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus finibus metus aliquet ultrices ornare. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut sagittis arcu.
-                                    Pellentesque aliquam gravida pharetra. Nulla auctor enim et gravida mollis. Curabitur consequat ipsum sed felis tempus tempor. Cras pretium lorem ut mi lacinia dignissim. Mauris vel felis diam.
-                                    In ut tempor quam. Ut pellentesque, odio ut dictum efficitur, turpis est molestie augue, non ullamcorper massa purus a erat. Suspendisse porta, tortor vel commodo mollis.
-                                </p>
-                                <h4 id="common-rail-dedicated">
-                                    Dedykowane dla:
-                                </h4>
-                                <div id="common-rail-vw">
-                                </div>
-                                <div id="common-rail-renault">
-                                </div>
-                            </div>
-                        </div>
-                        <div id="products-injector">
-                            <div id="injector">
-                                <h1 id="injector-head">
-                                    INJECTOR
-                                </h1>
-                                <p id="injector-paragraph">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus finibus metus aliquet ultrices ornare. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut sagittis arcu.
-                                    Pellentesque aliquam gravida pharetra. Nulla auctor enim et gravida mollis. Curabitur consequat ipsum sed felis tempus tempor. Cras pretium lorem ut mi lacinia dignissim. Mauris vel felis diam.
-                                    In ut tempor quam. Ut pellentesque, odio ut dictum efficitur, turpis est molestie augue, non ullamcorper massa purus a erat. Suspendisse porta, tortor vel commodo mollis.
-                                </p>
-                                <h4 id="injector-dedicated">
-                                    Dedykowane dla:
-                                </h4>
-                                <div id="injector-peugot">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="products-2">
-                        <div id="products-denso">
-                        </div>
-                        <div id="products-bosch">
-                        </div>
-                        <div id="products-continental">
-                        </div>
-                        <div id="products-delphi">
-                        </div>
-                        <div id="products-siemens">
-                        </div>
-                    </div>
+                    <footer class="footer">
+                        <ul>
+                            <li>
+                                <i class="fa fa-building" aria-hidden="true"></i>
+                                <span>Our company</span>
+                            </li>
+                            <li>
+                                <i class="fa fa-briefcase" aria-hidden="true"></i>
+                                <span>Our work</span>
+                            </li>
+                            <li>
+                                <i class="fa fa-info" aria-hidden="true"></i>
+                                <span>Information</span>
+                            </li>
+                            <li>
+                                <i class="fa fa-newspaper-o" aria-hidden="true"></i>
+                                <span> Join our newsletter</span>
+                            </li>
+                            <li>
+                                <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                                <span>Email this page</span>
+                            </li>
+                            <li>
+                                <i class="fa fa-print" aria-hidden="true"></i>
+                                <span>Print this page</span>
+                            </li>
+                            <li>
+                                <i class="fa fa-comments" aria-hidden="true"></i>
+                                <span>Contact Us<span>
+                            </li>
+                        </ul>
+                    </footer>
                 </div>
             </div>
 
-            
-            <div class="row">
-                <div class="col-12">
-                    <div id="contact">
-                        <div id="contact-1">
-                            <div id="contact-text">
-                                <h1 id="contact-head">
-                                    KONTAKT
-                                </h1>
-                                <p id="contact-paragraph">
-                                    Skontaktuj się z nami
-                                </p>
-                            </div>
-                        </div>
-                        <div id="contact-2">
-                        </div>
-                        <div id="footer">
-                            <div id="contact-line">
-                                <div id="contact-logo">
-                                </div>
-                                <div id="studio-18">
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
 
         </div>
 
