--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="row" >
                 <div class="col-12">
                     <div id="home-background">
-                        <div naclass="nav-panel">
+                        <div class="nav-panel">
                             <div class="lang">
                                 <button class="pl">
                                     PL
