--- a/index.html
+++ b/index.html
@@ -12,80 +12,146 @@
             <div class="row" >
                 <div class="col-12">
                     <div id="home-background">
+
                         <div class="nav-panel">
+
                             <div class="lang">
                                 <button class="pl">
-                                    PL
+                                    <p>PL</p>
                                 </button>
                                 <button class="en">
-                                    EN
+                                    <p>EN</p>
                                 </button>
                                 <button class="de">
-                                    DE
+                                    <p>DE</p>
                                 </button>
                             </div>
+
                             <div class="nav-list">
                                     <a href="#home-background">
                                         HOME
-                                        <span class="line">
-                                        </span>
+                                        <span class="line"></span>
                                     </a>
-                                    <a href="#about">
+                                    <a href="#about-background">
                                         O RAILCOM
-                                        <span class="line">
-                                        </span>
+                                        <span class="line"></span>
                                     </a>
                                     <a href="#products">
                                         NASZE WTRYSKI
-                                        <span class="line">
-                                        </span>
+                                        <span class="line"></span>
                                     </a>
-                                    <a href="#contact">
+                                    <a href="#contact-background">
                                         KONTAKT
-                                        <span class="line">
-                                        </span>
+                                        <span class="line"></span>
                                     </a>
                             </div>
-                                <div class="hamburger-menu">
-                                    <span class="line">
-                                    </span>
-                                    <span class="line">
-                                    </span>
-                                    <span class="line">
-                                    </span>
-                                </div>
+
+                            <div class="hamburger-menu">
+                                <span class="line">
+                                </span>
+                                <span class="line">
+                                </span>
+                                <span class="line">
+                                </span>
+                            </div>
+
                         </div>
+
                         <div id="home">
                             <div id="home-logo">
                             </div>
                         </div>
+
+                        <div class="arrow-container">
+                            <a class="arrow" href="#about-background"></a>
+                        </div>
+
                     </div>
                 </div>
             </div>
 
             <div class="row">
                 <div class="col-12">
-                    <div id="about">
-                        <div id="about-text">
-                            <h1 id="about-head">
-                                O RAILCOM
-                            </h1>
-                            <p id="about-paragraph">
-                                <span>Lorem</span> ipsum dolor sit amet, consectetur adipiscing elit. Phasellus finibus metus <span>aliquet</span> ultrices ornare. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut sagittis arcu.
-                                Pellentesque aliquam gravida pharetra. Nulla auctor enim et gravida mollis. Curabitur consequat ipsum sed felis tempus tempor. Cras pretium lorem ut mi lacinia dignissim. Mauris vel felis diam.
-                                In ut tempor quam. Ut pellentesque, odio ut dictum efficitur, turpis est molestie augue, non ullamcorper massa purus a erat. Suspendisse porta, tortor vel commodo mollis.
-                            </p>
-                            <p id="about-paragraph-ofert">
-                                Diam elit ultrices dui, eu mattis massa velit sit amet purus.
-                            </p>
+                    <div id="about-background">
+
+                        <div class="nav-panel">
+
+                            <div class="lang">
+                                <button class="pl">
+                                    <p>PL</p>
+                                </button>
+                                <button class="en">
+                                    <p>EN</p>
+                                </button>
+                                <button class="de">
+                                    <p>DE</p>
+                                </button>
+                            </div>
+
+                            <div class="nav-list">
+                                    <a href="#home-background">
+                                        HOME
+                                        <span class="line">
+                                        </span>
+                                    </a>
+                                    <a href="#about-background">
+                                        O RAILCOM
+                                        <span class="line">
+                                        </span>
+                                    </a>
+                                    <a href="#products-1">
+                                        NASZE WTRYSKI
+                                        <span class="line">
+                                        </span>
+                                    </a>
+                                    <a href="#contact-background">
+                                        KONTAKT
+                                        <span class="line">
+                                        </span>
+                                    </a>
+                            </div>
+
+                            <div class="hamburger-menu">
+                                <span class="line">
+                                </span>
+                                <span class="line">
+                                </span>
+                                <span class="line">
+                                </span>
+                            </div>
+
                         </div>
+
+                        <div id="about">
+                            <div id="about-text">
+                                <h1 id="about-head">
+                                    O RAILCOM
+                                </h1>
+                                <p id="about-paragraph">
+                                    <span>Lorem</span> ipsum dolor sit amet, consectetur adipiscing elit. Phasellus finibus metus <span>aliquet</span> ultrices ornare. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut sagittis arcu.
+                                    Pellentesque aliquam gravida pharetra. Nulla auctor enim et gravida mollis. Curabitur consequat ipsum sed felis tempus tempor. Cras pretium lorem ut mi lacinia dignissim. Mauris vel felis diam.
+                                    In ut tempor quam. Ut pellentesque, odio ut dictum efficitur, turpis est molestie augue, non ullamcorper massa purus a erat. Suspendisse porta, tortor vel commodo mollis.
+                                </p>
+                                <p id="about-paragraph-ofert">
+                                    Diam elit ultrices dui, eu mattis massa velit sit amet purus.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="arrow-container">
+                            <a class="arrow" href="#products-1">
+                            </a>
+                        </div>
+
                     </div>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-12" id="products">
+                <div class="col-12">
+
                     <div id="products-1">
+
                         <div id="products-common-rail">
                             <div id="common-rail">
                                     <h1 id="common-rail-head">
@@ -103,8 +169,9 @@
                                     </div>
                                     <div id="common-rail-renault">
                                     </div>
-                                </div>
+                            </div>
                         </div>
+
                         <div id="products-injector">
                             <div id="injector">
                                 <h1 id="injector-head">
@@ -122,27 +189,122 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="products-other-container">
+                            <div class="products-other-text">
+                                <p>blablaba</p>
+                            </div>
+                            <div class="arrow-black-container">
+                                <a class="arrow-black" href="#products-2">
+                                </a>
+                            </div>
+                        </div>
+
                     </div>
-                    <div id="products-2">
-                        <div id="products-denso">
-                        </div>
-                        <div id="products-bosch">
-                        </div>
-                        <div id="products-continental">
-                        </div>
-                        <div id="products-delphi">
-                        </div>
-                        <div id="products-siemens">
-                        </div>
-                    </div>
+
                 </div>
             </div>
 
+            <div class="row">
+                <div class="col-12">
+
+                    <div id="products-2">
+
+                        <div id="products-second-page">
+
+                                <div id="background-denso">
+                                    <div id="products-denso">
+                                    </div>
+                                </div>
+                                <div id="background-bosch">
+                                    <div id="products-bosch">
+                                    </div>
+                                </div>
+                                <div id="background-continental">
+                                    <div id="products-continental">
+                                    </div>
+                                </div>
+                                <div id="background-delphi">
+                                    <div id="products-delphi">
+                                    </div>
+                                </div>
+                                <div id="background-siemens">
+                                    <div id="products-siemens">
+                                    </div>
+                                </div>
+
+                        </div>
+
+                        <div class="products-other-container">
+                            <div class="products-other-text">
+                                <p>blablaba</p>
+                            </div>
+                            <div class="arrow-black-container">
+                                <a class="arrow-black" href="#products-1">
+                                </a>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
 
             <div class="row">
                 <div class="col-12">
-                    <div id="contact">
+
+                    <div id="contact-background">
+
+                        <div class="nav-panel">
+
+                            <div class="lang">
+                                <button class="pl">
+                                    <p>PL</p>
+                                </button>
+                                <button class="en">
+                                    <p>EN</p>
+                                </button>
+                                <button class="de">
+                                    <p>DE</p>
+                                </button>
+                            </div>
+
+                            <div class="nav-list">
+                                <a href="#home-background">
+                                    HOME
+                                    <span class="line">
+                                    </span>
+                                </a>
+                                <a href="#about-background">
+                                    O RAILCOM
+                                    <span class="line">
+                                    </span>
+                                </a>
+                                <a href="#products-1">
+                                    NASZE WTRYSKI
+                                    <span class="line">
+                                    </span>
+                                </a>
+                                <a href="#contact-background">
+                                    KONTAKT
+                                    <span class="line">
+                                    </span>
+                                </a>
+                            </div>
+
+                            <div class="hamburger-menu">
+                                <span class="line">
+                                </span>
+                                <span class="line">
+                                </span>
+                                <span class="line">
+                                </span>
+                            </div>
+
+                        </div>
+
                         <div id="contact-1">
+
                             <div id="contact-text">
                                 <h1 id="contact-head">
                                     KONTAKT
@@ -151,15 +313,22 @@
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus finibus metus aliquet ultrices ornare. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ut sagittis arcu.
                                 </p>
                                 <p id="contact-detail">
-                                    Pellentesque aliquam gravida pharetra.<br>
-                                    <span>+48 567 943 000</span>
+                                    Pellentesque aliquam gravida pharetra.
                                 </p>
+                                <h1 id="contact-telephone"><span>+48 567 943 000</span></h1>
                             </div>
+
                         </div>
+
                         <div id="contact-2">
                         </div>
+
                         <div id="footer">
+
                             <div id="contact-line">
+
+                            </div>
+                            <div id="contact-container">
                                 <div id="contact-logo">
                                 </div>
                                 <div id="studio-18">
@@ -167,7 +336,9 @@
                             </div>
 
                         </div>
+
                     </div>
+
                 </div>
             </div>
 
