--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
                             </div>
 
                             <div class="nav-list">
+                                    <div class="closebtn">&times;</div>
+
                                     <a href="#home-background">
                                         HOME
                                         <span class="line"></span>
@@ -54,6 +56,7 @@
                                 <span class="line">
                                 </span>
                             </div>
+
 
                         </div>
 
