--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                         O RAILCOM
                                         <span class="line"></span>
                                     </a>
-                                    <a href="#products">
+                                    <a href="#products-1">
                                         NASZE WTRYSKI
                                         <span class="line"></span>
                                     </a>
@@ -195,10 +195,10 @@
 
                         <div class="products-other-container">
                             <div class="products-other-text">
-                                <p>blablaba</p>
+                                <p>Poznaj inne układy Common Rail</p>
                             </div>
                             <div class="arrow-black-container">
-                                <a class="arrow-black" href="#products-2">
+                                <a class="arrow-black" id="arrow-1" href="#products-2">
                                 </a>
                             </div>
                         </div>
@@ -240,10 +240,10 @@
 
                         <div class="products-other-container">
                             <div class="products-other-text">
-                                <p>blablaba</p>
+                                <p>Poznaj nasze wtryski</p>
                             </div>
                             <div class="arrow-black-container">
-                                <a class="arrow-black" href="#products-1">
+                                <a class="arrow-black" id="arrow-2" href="#products-1">
                                 </a>
                             </div>
                         </div>
@@ -335,6 +335,7 @@
                                 <div id="contact-logo">
                                 </div>
                                 <div id="studio-18">
+                                    <a href="http://studio-eighteen.eu/"></a>
                                 </div>
                             </div>
 
