--- a/index.html
+++ b/index.html
@@ -195,7 +195,11 @@
 
                         <div class="products-other-container">
                             <div class="products-other-text">
-                                <p>Poznaj inne układy Common Rail</p>
+                                <p>Poznaj</p>
+                                <p>inne</p>
+                                <p>układy</p>
+                                <p>Common</p>
+                                <p>Rail</p>
                             </div>
                             <div class="arrow-black-container">
                                 <a class="arrow-black" id="arrow-1" href="#products-2">
@@ -240,7 +244,9 @@
 
                         <div class="products-other-container">
                             <div class="products-other-text">
-                                <p>Poznaj nasze wtryski</p>
+                                <p>Poznaj</p>
+                                <p>nasze</p>
+                                <p>wtryski</p> 
                             </div>
                             <div class="arrow-black-container">
                                 <a class="arrow-black" id="arrow-2" href="#products-1">
